Fixed alignment of nav bar logo

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -47,7 +47,7 @@ body {
   display: inline-block;
   width: 60px;
   font-size: 22px;
-  margin-top: 10px;
+  padding-top: 10px;
   margin-left: 20px;
 }
 @media screen and (max-width: 767px) {
